# bitmap_fonts_neon_osd_Draw_yuv

./: .gitignore  CMakeLists.txt  CMakeLists_one.txt  CMakeLists_separate.txt  android_tools.md  readme.md  readme_en.md  readme_zh-cn.md
.github/workflows/: android-neon.yml
demo/: CMakeLists.txt  Makefile  Makefile.android.clang  Makefile.android.gcc
demo/inc/: build_time.h  common.h  neon_intrinsics_test.h  osd_test.h
demo/src/: build_time.c  neon_intrinsics_test.c  osd_test.c  test.c
osd_Draw/: CMakeLists.txt  cpu_osd.c  cpu_osd.h  frontRes.c  neon_osd.c  neon_osd.h  osd_base.c  osd_base.h
